fix: project details layout for better spacing

--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,10 @@ textarea {
 }
 
 .project-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 340px;
   padding: 25px;
 }
 
